// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NativeWind theme parity matches the pre-migration key-kit snapshots in light and dark: pre-migration-dark 1`] = `
<View>
  <View
    className=""
    style={
      [
        {
          "opacity": 1,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        className="bg-surface rounded-md"
        style={
          [
            {},
            [
              {
                "alignSelf": "stretch",
                "minHeight": 44,
              },
              {
                "backgroundColor": "#8B9BE8",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "borderRadius": 18,
              },
              {},
            ]
          }
        />
        <View
          className="py-3 px-5 items-center justify-center self-stretch"
        >
          <View
            className="flex-row items-center justify-center gap-2"
          >
            <Text
              style={
                [
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  undefined,
                ]
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    className="bg-surface rounded-lg"
    style={
      [
        {
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 4,
            "width": 4,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        },
        [
          {
            "padding": 16,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 24,
          },
          {
            "shadowColor": "#1F1F1F",
            "shadowOffset": {
              "height": -4,
              "width": -4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          },
        ]
      }
    />
    <Text>
      Card body
    </Text>
  </View>
  <View
    className="flex-row items-center bg-surface rounded-md"
    style={
      [
        {
          "shadowColor": "#1F1F1F",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        [
          {
            "borderColor": "transparent",
            "borderWidth": 0,
            "minHeight": 44,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 18,
          },
          {
            "shadowColor": "#000000",
            "shadowOffset": {
              "height": -2,
              "width": -2,
            },
            "shadowOpacity": 1,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <TextInput
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#A8A8AE"
      style={
        [
          {
            "color": "#F2F2F7",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 2,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
      value="Current tokens"
    />
  </View>
</View>
`;

exports[`NativeWind theme parity matches the pre-migration key-kit snapshots in light and dark: pre-migration-light 1`] = `
<View>
  <View
    className=""
    style={
      [
        {
          "opacity": 1,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        className="bg-surface rounded-md"
        style={
          [
            {},
            [
              {
                "alignSelf": "stretch",
                "minHeight": 44,
              },
              {
                "backgroundColor": "#7B8CDE",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          pointerEvents="none"
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "borderRadius": 18,
              },
              {},
            ]
          }
        />
        <View
          className="py-3 px-5 items-center justify-center self-stretch"
        >
          <View
            className="flex-row items-center justify-center gap-2"
          >
            <Text
              style={
                [
                  {
                    "color": "#fff",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  undefined,
                ]
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    className="bg-surface rounded-lg"
    style={
      [
        {
          "shadowColor": "#BFBFBF",
          "shadowOffset": {
            "height": 4,
            "width": 4,
          },
          "shadowOpacity": 1,
          "shadowRadius": 8,
        },
        [
          {
            "padding": 16,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 24,
          },
          {
            "shadowColor": "#FFFFFF",
            "shadowOffset": {
              "height": -4,
              "width": -4,
            },
            "shadowOpacity": 1,
            "shadowRadius": 8,
          },
        ]
      }
    />
    <Text>
      Card body
    </Text>
  </View>
  <View
    className="flex-row items-center bg-surface rounded-md"
    style={
      [
        {
          "shadowColor": "#FFFFFF",
          "shadowOffset": {
            "height": 2,
            "width": 2,
          },
          "shadowOpacity": 1,
          "shadowRadius": 4,
        },
        [
          {
            "borderColor": "transparent",
            "borderWidth": 0,
            "minHeight": 44,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "borderRadius": 18,
          },
          {
            "shadowColor": "#BFBFBF",
            "shadowOffset": {
              "height": -2,
              "width": -2,
            },
            "shadowOpacity": 1,
            "shadowRadius": 4,
          },
        ]
      }
    />
    <TextInput
      editable={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#6E6E73"
      style={
        [
          {
            "color": "#1C1C1E",
            "flex": 1,
            "fontSize": 16,
            "paddingVertical": 2,
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
      value="Current tokens"
    />
  </View>
</View>
`;

exports[`NativeWind theme parity resolves exact light and dark runtime variables: runtime-variables-dark 1`] = `
{
  "--color-accent": "#8B9BE8",
  "--color-accent-muted": "#5A6BB5",
  "--color-background": "#0E0E0E",
  "--color-bg": "#0E0E0E",
  "--color-border": "#262626",
  "--color-card": "#0A0A0A",
  "--color-destructive": "#E07A7A",
  "--color-elevated": "#1C1C1E",
  "--color-error": "#E07A7A",
  "--color-foreground": "#F2F2F7",
  "--color-highlight": "#1F1F1F",
  "--color-muted": "#141414",
  "--color-muted-foreground": "#A8A8AE",
  "--color-primary": "#8B9BE8",
  "--color-secondary": "#141414",
  "--color-shadow": "#000000",
  "--color-success": "#4ADE80",
  "--color-surface": "#000000",
  "--color-surface-secondary": "#141414",
  "--color-text": "#F2F2F7",
  "--color-text-secondary": "#A8A8AE",
  "--color-warning": "#FBBF24",
  "--radius-lg": "24px",
  "--radius-md": "18px",
  "--radius-pill": "999px",
  "--radius-sm": "12px",
  "--spacing": "4px",
  "--spacing-1": "4px",
  "--spacing-2": "8px",
  "--spacing-3": "12px",
  "--spacing-4": "16px",
  "--spacing-5": "20px",
  "--spacing-6": "24px",
  "--spacing-8": "32px",
  "--text-2xl": "28px",
  "--text-base": "16px",
  "--text-lg": "18px",
  "--text-md": "16px",
  "--text-sm": "14px",
  "--text-xl": "22px",
  "--text-xs": "12px",
}
`;

exports[`NativeWind theme parity resolves exact light and dark runtime variables: runtime-variables-light 1`] = `
{
  "--color-accent": "#7B8CDE",
  "--color-accent-muted": "#A8B3E5",
  "--color-background": "#F2F2F2",
  "--color-bg": "#F2F2F2",
  "--color-border": "#D8D8D8",
  "--color-card": "#FFFFFF",
  "--color-destructive": "#E07A7A",
  "--color-elevated": "#FFFFFF",
  "--color-error": "#E07A7A",
  "--color-foreground": "#1C1C1E",
  "--color-highlight": "#FFFFFF",
  "--color-muted": "#F5F5F5",
  "--color-muted-foreground": "#6E6E73",
  "--color-primary": "#7B8CDE",
  "--color-secondary": "#F5F5F5",
  "--color-shadow": "#BFBFBF",
  "--color-success": "#15803D",
  "--color-surface": "#FFFFFF",
  "--color-surface-secondary": "#F5F5F5",
  "--color-text": "#1C1C1E",
  "--color-text-secondary": "#6E6E73",
  "--color-warning": "#B45309",
  "--radius-lg": "24px",
  "--radius-md": "18px",
  "--radius-pill": "999px",
  "--radius-sm": "12px",
  "--spacing": "4px",
  "--spacing-1": "4px",
  "--spacing-2": "8px",
  "--spacing-3": "12px",
  "--spacing-4": "16px",
  "--spacing-5": "20px",
  "--spacing-6": "24px",
  "--spacing-8": "32px",
  "--text-2xl": "28px",
  "--text-base": "16px",
  "--text-lg": "18px",
  "--text-md": "16px",
  "--text-sm": "14px",
  "--text-xl": "22px",
  "--text-xs": "12px",
}
`;
